--- a/style.css
+++ b/style.css
@@ -1,54 +1,17 @@
-#heading{
-  background-color: purple;
-  color: white;
-
-}
-
 .container{
-  background-color: beige;
-  margin-top: 30px;
-}
+  height: 800px;
+  width: 800px;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+  display: block;
+  margin-left: 30%;
+  margin-right: 30%;
 
-#name{
-  color: black;
-  padding-right: 6px;
-  padding-left: 10px;
-  margin-top: 1rem;
-}
-
-#text{
-  margin-top: 30px;
-  height: 20px;
-  border-radius: 10px;
-  cursor: pointer;
 
 }
-#submit{
-  background-color: white;
-  box-sizing: border-box;
-  height: 30px;
-  margin-right: 100px;
-  margin-left: 50px;
-  border: none;
-  width: 80px;
-  cursor: pointer;
-  border-radius: 5px;
+#h1{
+  color: purple;
 }
-#submit:hover{
-  background-color: green;
-  color: white;
-}
-#delete{
-  height: 30px;
-  width: 80px;
-  border: none;
-  background-color: white;
-  cursor: pointer;
-  margin-right: 200px;
-  border-radius: 5px;
 
-}
-#delete:hover{
-background-color: red;
-color: white;
-}
+
