--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
 .container{
-  height: 800px;
-  width: 800px;
-  background-color: black;
+  height: 600px;
+  width: 600px;
+  background-color: blueviolet;
   justify-content: center;
+  display: inline-block;
   align-items: center;
-  display: block;
-  margin-left: 30%;
-  margin-right: 30%;
-
-
 }
-#h1{
-  color: purple;
+.heading{
+  margin-top: 0;
 }
-
-
-
