--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   justify-content: center;
   display: inline-block;
   align-items: center;
+  border-radius: 10px;
 }
 .heading{
   margin-top: 0;
@@ -12,5 +13,25 @@
 
 #toggle{
   margin-left: 30rem;
-  margin-top: 0;
+  justify-content: end;
+  position: relative;
+  align-items: first baseline;
+  text-align: end;
+  
+}
+
+ul{
+  list-style: none;
+  margin-top: 10px;
+  width: 30rem;
+}
+
+
+#input{
+  flex: 1;
+  padding: 8px;
+}
+
+.rsvp-button{
+  background-color: #6c757d;
 }
